--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "My personal portfolio",
-  "main": "index.js",
+  "main": "assets/js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
