--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My personal portfolio",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/astrokd/portfolio/issues"
   },
-  "homepage": "https://github.com/astrokd/portfolio#readme"
+  "homepage": "https://github.com/astrokd/portfolio#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  }
 }
